2001-11-19  Bernhard Rosenkraenzer <bero@redhat.com>
	* src/grep.c: Add --only-matching (-o) switch (see NEWS)
	* doc/grep.texi, doc/grep.1, NEWS: Document changes

2001-09-25  Bernhard Rosenkraenzer <bero@redhat.com>
	* configure.in: Detect pcre correctly even when it's in
	  non-standard locations, using pcre-config
	* src/grep.c: Add --color={always,never,tty} argument (like in ls)
	* src/grep.c: Turn off blinking in the default colorization
	* src/grep.c: Add --devices (-D) switch (analogous to --directories)
	* src/dfa.c: Fix an i18n bug: echo "A" | grep '[A-Z0-9]' wouldn't work
	  in non-C-Locales on systems using current versions of glibc.
	* AUTHORS: Change maintainer, credit Alain for his work until now
	* configure.in, m4/decl.m4, m4/dosfile.m4, m4/gettext.m4,
	  m4/init.m4, m4/install.m4, m4/largefile.m4, m4/lcmessage.m4,
	  m4/header.m4, m4/isc-posix.m4, m4/missing.m4, m4/progtest.m4,
	  m4/sanity.m4:
	  Fix build with autoconf 2.5x, retain 2.1x compatibility for now
	* autogen.sh: Add some crude hacks to make it possible to build with
	  both autoconf 2.5x and 2.1x
	* acconfig.h: removed (no longer required)
	* Makefile.am: add cvs-clean target
	* doc/grep.texi, doc/grep.1, NEWS: Document changes
	  (--color, --devices, -D)
	* src/dfa.c, src/grep.c: Add vim modelines

2001-08-30  Alain Magloire

	* configure.in: Add gl in ALL_LINGUAS.

2001-08-30  Kurt D Schwehr

	* doc/grep.1: Warn that grep insert a "--" between groups of matches,
	when using the context options.
	* doc/grep.texi: Likewised.

2001-08-25  Heikki Korpela

	* doc/grep.texi: Point out that some Platforms do not support
	reading of directories and silently ignore them.

2001-08-21  Alain Magloire

	* lib/malloc.c: New file:
	* lib/realloc.c: New file:
	* lib/Makefile.am: Add malloc.c and realloc.c in EXTRA_DIST.

2001-07-31  Alain Magloire

	* po/*.po: New files from the translation team:
	grep-2.5e.de.po  grep-2.5e.el.po  grep-2.5e.eo.po grep-2.5e.es.po